# text-message-sender

./: .gitignore  .tool-versions  README.md  messages-2025-08-02.json  pyproject.toml
outbox/: question_list.example.json
prego/: question.py
prego/lib/: log.py  outbox.py  prompt.py  sender.py
sundayschool/: class_list_test.json  question.py
sundayschool/lib/: data.py  log.py  prompt.py  sender.py  terminal.py
