[project]
name = "prego"
version = "0.1.0"
description = ""
authors = [
    {name = "Marc Streeter", email = "mstreeter@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
prego = "prego.question:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
